MODON MRE BPDEV/force-app/main/default/objects/Registration_Agent__c/Registration_Agent__c.object-meta.xml
<CustomObject>
    <description>This is the child Object to Registration</description>
    <label>Registration Agent</label>
    <nameField>
        <displayFormat>RA-{00000}</displayFormat>
        <label>Agent Full Name (Passport)</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Registration Agents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>