MODON MRE BPDEV/force-app/main/default/objects/Registration_Agent__c/fields/Agent_Email__c.field-meta.xml
<CustomField>
    <fullName>Agent_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Agent Email</label>
    <type>Email</type>
</CustomField>