MODON MRE BPDEV/force-app/main/default/objects/Registration_Agent__c/fields/Agent_Nationality__c.field-meta.xml
<CustomField>
    <fullName>Agent_Nationality__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Agent Nationality</label>
    <length>80</length>
    <type>Text</type>
</CustomField>