MODON MRE BPDEV/force-app/main/default/objects/Registration_Agent__c/fields/Broker_Certificate_Number__c.field-meta.xml
<CustomField>
    <fullName>Broker_Certificate_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Broker Certificate Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>