MODON MRE BPDEV/force-app/main/default/objects/Registration_Agent__c/fields/is_Owner__c.field-meta.xml
<CustomField>
    <fullName>is_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Owner??</label>
    <type>Checkbox</type>
</CustomField>