MODON MRE BPDEV/force-app/main/default/objects/Registration_Agent__c/fields/Is_Owner_and_Manager_Same__c.field-meta.xml
<CustomField>
    <fullName>Is_Owner_and_Manager_Same__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Owner and Manager Same?</label>
    <type>Checkbox</type>
</CustomField>