MODON MRE BPDEV/force-app/main/default/objects/Registration_Agent__c/fields/IsBroker__c.field-meta.xml
<CustomField>
    <fullName>IsBroker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Broker</label>
    <type>Checkbox</type>
</CustomField>