MODON MRE BPDEV/force-app/main/default/objects/Registration_Agent__c/fields/Issuing_Authority__c.field-meta.xml
<CustomField>
    <fullName>Issuing_Authority__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Issuing Authority</label>
    <length>50</length>
    <type>Text</type>
</CustomField>