MODON MRE BPDEV/force-app/main/default/objects/Registration_Agent__c/fields/Mobile_Country_COde__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Country_COde__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mobile Country COde</label>
    <length>4</length>
    <type>Text</type>
</CustomField>