MODON MRE BPDEV/force-app/main/default/objects/Registration_Agent__c/fields/Office_Manager_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Office_Manager_First_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Office Manager First Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>