MODON MRE BPDEV/force-app/main/default/objects/Registration_Agent__c/fields/Office_Manager_Nationality__c.field-meta.xml
<CustomField>
    <fullName>Office_Manager_Nationality__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Office Manager Nationality</label>
    <length>80</length>
    <type>Text</type>
</CustomField>