MODON MRE BPDEV/force-app/main/default/objects/Registration_Agent__c/fields/Office_Manager_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Office_Manager_Phone_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Office Manager Phone Number</label>
    <type>Phone</type>
</CustomField>