MODON MRE BPDEV/force-app/main/default/objects/Registration_Agent__c/fields/Passport_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Passport_Expiry__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Passport Expiry</label>
    <type>Date</type>
</CustomField>