MODON MRE BPDEV/force-app/main/default/objects/Registration_Agent__c/fields/Passport_Issue__c.field-meta.xml
<CustomField>
    <fullName>Passport_Issue__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Passport Issue</label>
    <type>Date</type>
</CustomField>