MODON MRE BPDEV/force-app/main/default/objects/Registration_Agent__c/fields/POA__c.field-meta.xml
<CustomField>
    <fullName>POA__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>POA Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>