MODON MRE BPDEV/force-app/main/default/objects/Registration_Agent__c/fields/POA_Email__c.field-meta.xml
<CustomField>
    <fullName>POA_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>POA Email</label>
    <type>Email</type>
</CustomField>