MODON MRE BPDEV/force-app/main/default/objects/Registration_Agent__c/fields/Registration_Name__c.field-meta.xml
<CustomField>
    <fullName>Registration_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Registration Name</label>
    <referenceTo>Registration__c</referenceTo>
    <relationshipLabel>Registration Agents</relationshipLabel>
    <relationshipName>Registration_Agents</relationshipName>
    <type>Lookup</type>
</CustomField>