MODON MRE BPDEV/force-app/main/default/objects/Registration_Agent__c/fields/Registration_Status__c.field-meta.xml
<CustomField>
    <fullName>Registration_Status__c</fullName>
    <formula>TEXT(Registration_Name__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registration Status</label>
    <type>Text</type>
</CustomField>