MODON MRE BPDEV/force-app/main/default/objects/Registration_Agent__c/fields/Service_Request_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Request_Name__c</fullName>
    <formula>Registration_Name__r.Service_Request_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Request Name</label>
    <type>Text</type>
</CustomField>