MODON MRE BPDEV/force-app/main/default/objects/Registration_Agent__c/fields/Share_holding_percentage__c.field-meta.xml
<CustomField>
    <fullName>Share_holding_percentage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Share holding percentage</label>
    <length>3</length>
    <type>Text</type>
</CustomField>