MODON MRE BPDEV/force-app/main/default/objects/Registration_Agent__c/fields/Task_Comments_c__c.field-meta.xml
<CustomField>
    <fullName>Task_Comments_c__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Task_Comments__c</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>