MODON MRE BPDEV/force-app/main/default/objects/Registration_Agent__c/fields/UAE_Resident_Status__c.field-meta.xml
<CustomField>
    <fullName>UAE_Resident_Status__c</fullName>
    <label>UAE Resident Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Resident</fullName>
            </value>
            <value>
                <fullName>Non-Resident</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>