MODON MRE BPDEV/force-app/main/default/objects/Registration_Agent__c/fields/Visa_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Visa_Expiry__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Visa Expiry</label>
    <type>Date</type>
</CustomField>