MODON MRE BPDEV/force-app/main/default/objects/Registration_Agent__c/fields/Visa_Issue__c.field-meta.xml
<CustomField>
    <fullName>Visa_Issue__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Visa Issue</label>
    <type>Date</type>
</CustomField>