MODON MRE BPDEV/force-app/main/default/objects/Registration_Agent__c/fields/Visa_Number__c.field-meta.xml
<CustomField>
    <fullName>Visa_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Visa Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>