MODON MRE BPDEV/force-app/main/default/objects/Registration_Agent__c/fields/Visa_Sponsor_Name__c.field-meta.xml
<CustomField>
    <fullName>Visa_Sponsor_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Visa Sponsor Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>